// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationStepper should render correctly 1`] = `
<DocumentFragment>
  .cache-awa4sx {
  list-style: none;
  margin: 0;
  padding: 0;
  width: 100%;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
}

.cache-awa4sx .eccy81h1 {
  place-self: center;
}

.cache-awa4sx .eccy81h1:first-of-type {
  place-self: start;
}

.cache-awa4sx .eccy81h1:last-of-type {
  place-self: end;
}

.cache-fa08ij {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 700;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #b2b6c3;
}

.cache-fa08ij .eccy81h4 {
  border: 3px solid #d4dae7;
}

.cache-fa08ij[aria-current='true'] {
  color: #4f0599;
}

.cache-fa08ij[aria-current='true'] .eccy81h4 {
  border-color: #ffffff;
  color: #ffffff;
  background-color: #4f0599;
}

.cache-h56arn {
  position: relative;
  min-width: 32px;
  max-width: 32px;
  height: 32px;
  font-size: 16px;
  border-radius: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-84l6nl {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 8px;
  font-size: 13px;
  line-height: 18px;
  font-weight: 700;
}

.cache-84l6nl[aria-hidden='true'] {
  overflow: hidden;
  max-width: 0;
  white-space: nowrap;
}

<ul
    class="cache-awa4sx eccy81h0"
  >
    <li
      aria-current="true"
      class="cache-fa08ij eccy81h1"
    >
      <div
        class="cache-h56arn eccy81h4"
      >
        1
      </div>
      <div
        aria-hidden="false"
        class="cache-84l6nl eccy81h3"
      >
        First
      </div>
    </li>
    <li
      aria-current="false"
      class="cache-fa08ij eccy81h1"
    >
      <div
        class="cache-h56arn eccy81h4"
      >
        2
      </div>
      <div
        aria-hidden="false"
        class="cache-84l6nl eccy81h3"
      >
        Second
      </div>
    </li>
    <li
      aria-current="false"
      class="cache-fa08ij eccy81h1"
    >
      <div
        class="cache-h56arn eccy81h4"
      >
        3
      </div>
      <div
        aria-hidden="false"
        class="cache-84l6nl eccy81h3"
      >
        Third
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`NavigationStepper should render correctly with bad child 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-rvtyd0 {
  list-style: none;
  margin: 0;
  padding: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-rvtyd0 .eccy81h1 {
  margin-right: 8px;
}

.cache-rvtyd0 .eccy81h1:last-of-type {
  margin-right: 0;
}

.cache-stwzbd {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 700;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #149a7b;
}

.cache-stwzbd .eccy81h4 {
  background-color: #22c8a2;
  color: #ffffff;
}

.cache-h56arn {
  position: relative;
  min-width: 32px;
  max-width: 32px;
  height: 32px;
  font-size: 16px;
  border-radius: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-1e34p3j {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-1e34p3j.cache-1e34p3j {
  vertical-align: middle;
  stroke: currentColor;
}

.cache-84l6nl {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 8px;
  font-size: 13px;
  line-height: 18px;
  font-weight: 700;
}

.cache-84l6nl[aria-hidden='true'] {
  overflow: hidden;
  max-width: 0;
  white-space: nowrap;
}

.cache-1g9q5gh {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 700;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #b2b6c3;
}

.cache-1g9q5gh .eccy81h4 {
  border: 3px solid #d4dae7;
}

.cache-1g9q5gh[aria-current='true'] {
  color: #4f0599;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.cache-1g9q5gh[aria-current='true'] .eccy81h4 {
  border-color: #ffffff;
  color: #ffffff;
  background-color: #4f0599;
}

.cache-8blmi3 {
  height: calc(100% + calc(4px * 4));
  width: calc(100% + calc(4px * 4));
  position: absolute;
}

.cache-gqzzce-Loader {
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

.cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<ul
    class="cache-rvtyd0 eccy81h0"
  >
    <li
      aria-current="false"
      class="cache-stwzbd eccy81h1"
    >
      <div
        class="cache-h56arn eccy81h4"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-1e34p3j"
          stroke-width="2"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        aria-hidden="true"
        class="cache-84l6nl eccy81h3"
      >
        First
      </div>
    </li>
    <li
      aria-current="true"
      class="cache-1g9q5gh eccy81h1"
    >
      <div
        class="cache-h56arn eccy81h4"
      >
        <span
          class="cache-8blmi3 eccy81h2"
        >
          <svg
            aria-label="Loading"
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="20"
            aria-valuetext="20%"
            class="cache-gqzzce-Loader"
            role="progressbar"
            style="height: 100%; width: 100%;"
            viewBox="0 0 100 100"
          >
            <circle
              cx="50"
              cy="50"
              fill="none"
              r="46"
              stroke="transparent"
              stroke-width="8"
            />
            <circle
              class="cache-11f05l0-Loader"
              cx="50"
              cy="50"
              fill="none"
              r="46"
              stroke="#22c8a2"
              stroke-dasharray="289.02652413026095"
              stroke-dashoffset="231.22121930420877"
              stroke-linecap="round"
              stroke-width="8"
            />
          </svg>
        </span>
        2
      </div>
      <div
        aria-hidden="false"
        class="cache-84l6nl eccy81h3"
      >
        Second
      </div>
    </li>
    <li
      aria-current="false"
      class="cache-1g9q5gh eccy81h1"
    >
      <div
        class="cache-h56arn eccy81h4"
      >
        3
      </div>
      <div
        aria-hidden="true"
        class="cache-84l6nl eccy81h3"
      >
        Third
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`NavigationStepper should render correctly with bad child 2`] = `
<DocumentFragment>
  .cache-rvtyd0 {
  list-style: none;
  margin: 0;
  padding: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-rvtyd0 .eccy81h1 {
  margin-right: 8px;
}

.cache-rvtyd0 .eccy81h1:last-of-type {
  margin-right: 0;
}

.cache-stwzbd {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 700;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #149a7b;
}

.cache-stwzbd .eccy81h4 {
  background-color: #22c8a2;
  color: #ffffff;
}

.cache-h56arn {
  position: relative;
  min-width: 32px;
  max-width: 32px;
  height: 32px;
  font-size: 16px;
  border-radius: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-1e34p3j {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-1e34p3j.cache-1e34p3j {
  vertical-align: middle;
  stroke: currentColor;
}

.cache-84l6nl {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 8px;
  font-size: 13px;
  line-height: 18px;
  font-weight: 700;
}

.cache-84l6nl[aria-hidden='true'] {
  overflow: hidden;
  max-width: 0;
  white-space: nowrap;
}

.cache-1g9q5gh {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 700;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #b2b6c3;
}

.cache-1g9q5gh .eccy81h4 {
  border: 3px solid #d4dae7;
}

.cache-1g9q5gh[aria-current='true'] {
  color: #4f0599;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.cache-1g9q5gh[aria-current='true'] .eccy81h4 {
  border-color: #ffffff;
  color: #ffffff;
  background-color: #4f0599;
}

<ul
    class="cache-rvtyd0 eccy81h0"
  >
    <li
      aria-current="false"
      class="cache-stwzbd eccy81h1"
    >
      <div
        class="cache-h56arn eccy81h4"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-1e34p3j"
          stroke-width="2"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        aria-hidden="true"
        class="cache-84l6nl eccy81h3"
      >
        First
      </div>
    </li>
    <li
      aria-current="true"
      class="cache-1g9q5gh eccy81h1"
    >
      <div
        class="cache-h56arn eccy81h4"
      >
        2
      </div>
      <div
        aria-hidden="false"
        class="cache-84l6nl eccy81h3"
      />
    </li>
    <li
      aria-current="false"
      class="cache-1g9q5gh eccy81h1"
    >
      <div
        class="cache-h56arn eccy81h4"
      >
        3
      </div>
      <div
        aria-hidden="true"
        class="cache-84l6nl eccy81h3"
      />
    </li>
  </ul>
</DocumentFragment>
`;

exports[`NavigationStepper should render correctly with condensed 1`] = `
<DocumentFragment>
  .cache-rvtyd0 {
  list-style: none;
  margin: 0;
  padding: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-rvtyd0 .eccy81h1 {
  margin-right: 8px;
}

.cache-rvtyd0 .eccy81h1:last-of-type {
  margin-right: 0;
}

.cache-stwzbd {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 700;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #149a7b;
}

.cache-stwzbd .eccy81h4 {
  background-color: #22c8a2;
  color: #ffffff;
}

.cache-h56arn {
  position: relative;
  min-width: 32px;
  max-width: 32px;
  height: 32px;
  font-size: 16px;
  border-radius: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-1e34p3j {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-1e34p3j.cache-1e34p3j {
  vertical-align: middle;
  stroke: currentColor;
}

.cache-84l6nl {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 8px;
  font-size: 13px;
  line-height: 18px;
  font-weight: 700;
}

.cache-84l6nl[aria-hidden='true'] {
  overflow: hidden;
  max-width: 0;
  white-space: nowrap;
}

.cache-1g9q5gh {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 700;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #b2b6c3;
}

.cache-1g9q5gh .eccy81h4 {
  border: 3px solid #d4dae7;
}

.cache-1g9q5gh[aria-current='true'] {
  color: #4f0599;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.cache-1g9q5gh[aria-current='true'] .eccy81h4 {
  border-color: #ffffff;
  color: #ffffff;
  background-color: #4f0599;
}

<ul
    class="cache-rvtyd0 eccy81h0"
  >
    <li
      aria-current="false"
      class="cache-stwzbd eccy81h1"
    >
      <div
        class="cache-h56arn eccy81h4"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-1e34p3j"
          stroke-width="2"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        aria-hidden="true"
        class="cache-84l6nl eccy81h3"
      >
        First
      </div>
    </li>
    <li
      aria-current="true"
      class="cache-1g9q5gh eccy81h1"
    >
      <div
        class="cache-h56arn eccy81h4"
      >
        2
      </div>
      <div
        aria-hidden="false"
        class="cache-84l6nl eccy81h3"
      >
        Second
      </div>
    </li>
    <li
      aria-current="false"
      class="cache-1g9q5gh eccy81h1"
    >
      <div
        class="cache-h56arn eccy81h4"
      >
        3
      </div>
      <div
        aria-hidden="true"
        class="cache-84l6nl eccy81h3"
      >
        Third
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`NavigationStepper should render correctly with default condensed 1`] = `
<DocumentFragment>
  .cache-rvtyd0 {
  list-style: none;
  margin: 0;
  padding: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-rvtyd0 .eccy81h1 {
  margin-right: 8px;
}

.cache-rvtyd0 .eccy81h1:last-of-type {
  margin-right: 0;
}

.cache-stwzbd {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 700;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #149a7b;
}

.cache-stwzbd .eccy81h4 {
  background-color: #22c8a2;
  color: #ffffff;
}

.cache-h56arn {
  position: relative;
  min-width: 32px;
  max-width: 32px;
  height: 32px;
  font-size: 16px;
  border-radius: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-1e34p3j {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-1e34p3j.cache-1e34p3j {
  vertical-align: middle;
  stroke: currentColor;
}

.cache-84l6nl {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 8px;
  font-size: 13px;
  line-height: 18px;
  font-weight: 700;
}

.cache-84l6nl[aria-hidden='true'] {
  overflow: hidden;
  max-width: 0;
  white-space: nowrap;
}

.cache-1g9q5gh {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 700;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #b2b6c3;
}

.cache-1g9q5gh .eccy81h4 {
  border: 3px solid #d4dae7;
}

.cache-1g9q5gh[aria-current='true'] {
  color: #4f0599;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.cache-1g9q5gh[aria-current='true'] .eccy81h4 {
  border-color: #ffffff;
  color: #ffffff;
  background-color: #4f0599;
}

<ul
    class="cache-rvtyd0 eccy81h0"
  >
    <li
      aria-current="false"
      class="cache-stwzbd eccy81h1"
    >
      <div
        class="cache-h56arn eccy81h4"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-1e34p3j"
          stroke-width="2"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        aria-hidden="true"
        class="cache-84l6nl eccy81h3"
      >
        First
      </div>
    </li>
    <li
      aria-current="true"
      class="cache-1g9q5gh eccy81h1"
    >
      <div
        class="cache-h56arn eccy81h4"
      >
        2
      </div>
      <div
        aria-hidden="false"
        class="cache-84l6nl eccy81h3"
      >
        Second
      </div>
    </li>
    <li
      aria-current="false"
      class="cache-1g9q5gh eccy81h1"
    >
      <div
        class="cache-h56arn eccy81h4"
      >
        3
      </div>
      <div
        aria-hidden="true"
        class="cache-84l6nl eccy81h3"
      >
        Third
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`NavigationStepper should render correctly with isLoading 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-awa4sx {
  list-style: none;
  margin: 0;
  padding: 0;
  width: 100%;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
}

.cache-awa4sx .eccy81h1 {
  place-self: center;
}

.cache-awa4sx .eccy81h1:first-of-type {
  place-self: start;
}

.cache-awa4sx .eccy81h1:last-of-type {
  place-self: end;
}

.cache-stwzbd {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 700;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #149a7b;
}

.cache-stwzbd .eccy81h4 {
  background-color: #22c8a2;
  color: #ffffff;
}

.cache-h56arn {
  position: relative;
  min-width: 32px;
  max-width: 32px;
  height: 32px;
  font-size: 16px;
  border-radius: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-1e34p3j {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-1e34p3j.cache-1e34p3j {
  vertical-align: middle;
  stroke: currentColor;
}

.cache-84l6nl {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 8px;
  font-size: 13px;
  line-height: 18px;
  font-weight: 700;
}

.cache-84l6nl[aria-hidden='true'] {
  overflow: hidden;
  max-width: 0;
  white-space: nowrap;
}

.cache-fa08ij {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 700;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #b2b6c3;
}

.cache-fa08ij .eccy81h4 {
  border: 3px solid #d4dae7;
}

.cache-fa08ij[aria-current='true'] {
  color: #4f0599;
}

.cache-fa08ij[aria-current='true'] .eccy81h4 {
  border-color: #ffffff;
  color: #ffffff;
  background-color: #4f0599;
}

.cache-8blmi3 {
  height: calc(100% + calc(4px * 4));
  width: calc(100% + calc(4px * 4));
  position: absolute;
}

.cache-gqzzce-Loader {
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

.cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<ul
    class="cache-awa4sx eccy81h0"
  >
    <li
      aria-current="false"
      class="cache-stwzbd eccy81h1"
    >
      <div
        class="cache-h56arn eccy81h4"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-1e34p3j"
          stroke-width="2"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        aria-hidden="false"
        class="cache-84l6nl eccy81h3"
      >
        First
      </div>
    </li>
    <li
      aria-current="true"
      class="cache-fa08ij eccy81h1"
    >
      <div
        class="cache-h56arn eccy81h4"
      >
        <span
          class="cache-8blmi3 eccy81h2"
        >
          <svg
            aria-label="Loading"
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="20"
            aria-valuetext="20%"
            class="cache-gqzzce-Loader"
            role="progressbar"
            style="height: 100%; width: 100%;"
            viewBox="0 0 100 100"
          >
            <circle
              cx="50"
              cy="50"
              fill="none"
              r="46"
              stroke="transparent"
              stroke-width="8"
            />
            <circle
              class="cache-11f05l0-Loader"
              cx="50"
              cy="50"
              fill="none"
              r="46"
              stroke="#22c8a2"
              stroke-dasharray="289.02652413026095"
              stroke-dashoffset="231.22121930420877"
              stroke-linecap="round"
              stroke-width="8"
            />
          </svg>
        </span>
        2
      </div>
      <div
        aria-hidden="false"
        class="cache-84l6nl eccy81h3"
      >
        Second
      </div>
    </li>
    <li
      aria-current="false"
      class="cache-fa08ij eccy81h1"
    >
      <div
        class="cache-h56arn eccy81h4"
      >
        3
      </div>
      <div
        aria-hidden="false"
        class="cache-84l6nl eccy81h3"
      >
        Third
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`NavigationStepper should render correctly with only bad children 1`] = `
<DocumentFragment>
  .cache-rvtyd0 {
  list-style: none;
  margin: 0;
  padding: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-rvtyd0 .eccy81h1 {
  margin-right: 8px;
}

.cache-rvtyd0 .eccy81h1:last-of-type {
  margin-right: 0;
}

<ul
    class="cache-rvtyd0 eccy81h0"
  />
</DocumentFragment>
`;

exports[`NavigationStepper should render correctly with step prop 1`] = `
<DocumentFragment>
  .cache-awa4sx {
  list-style: none;
  margin: 0;
  padding: 0;
  width: 100%;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
}

.cache-awa4sx .eccy81h1 {
  place-self: center;
}

.cache-awa4sx .eccy81h1:first-of-type {
  place-self: start;
}

.cache-awa4sx .eccy81h1:last-of-type {
  place-self: end;
}

.cache-stwzbd {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 700;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #149a7b;
}

.cache-stwzbd .eccy81h4 {
  background-color: #22c8a2;
  color: #ffffff;
}

.cache-h56arn {
  position: relative;
  min-width: 32px;
  max-width: 32px;
  height: 32px;
  font-size: 16px;
  border-radius: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-1e34p3j {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-1e34p3j.cache-1e34p3j {
  vertical-align: middle;
  stroke: currentColor;
}

.cache-84l6nl {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 8px;
  font-size: 13px;
  line-height: 18px;
  font-weight: 700;
}

.cache-84l6nl[aria-hidden='true'] {
  overflow: hidden;
  max-width: 0;
  white-space: nowrap;
}

.cache-fa08ij {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 700;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #b2b6c3;
}

.cache-fa08ij .eccy81h4 {
  border: 3px solid #d4dae7;
}

.cache-fa08ij[aria-current='true'] {
  color: #4f0599;
}

.cache-fa08ij[aria-current='true'] .eccy81h4 {
  border-color: #ffffff;
  color: #ffffff;
  background-color: #4f0599;
}

<ul
    class="cache-awa4sx eccy81h0"
  >
    <li
      aria-current="false"
      class="cache-stwzbd eccy81h1"
    >
      <div
        class="cache-h56arn eccy81h4"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-1e34p3j"
          stroke-width="2"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        aria-hidden="false"
        class="cache-84l6nl eccy81h3"
      >
        First
      </div>
    </li>
    <li
      aria-current="true"
      class="cache-fa08ij eccy81h1"
    >
      <div
        class="cache-h56arn eccy81h4"
      >
        2
      </div>
      <div
        aria-hidden="false"
        class="cache-84l6nl eccy81h3"
      >
        Second
      </div>
    </li>
    <li
      aria-current="false"
      class="cache-fa08ij eccy81h1"
    >
      <div
        class="cache-h56arn eccy81h4"
      >
        3
      </div>
      <div
        aria-hidden="false"
        class="cache-84l6nl eccy81h3"
      >
        Third
      </div>
    </li>
  </ul>
</DocumentFragment>
`;
